--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         <div class="close-menu-icon" onclick="toggleMenu()">
             <i class="fas fa-times"></i>
         </div>
-        <a href="https://github.com/Gxyenn/Gxyenn.github.io" target="_blank">Project</a>
+        <a href="https://youtube.com/@GxyenDev" target="_blank">Support</a>
     </div>
 
     <img class="profile-image" src="https://files.catbox.moe/j6x9zj.jpg" alt="Profile Picture">
@@ -223,4 +223,4 @@
     </script>
 
 </body>
-</html>
+                                                                                    </html>
