--- a/index.html
+++ b/index.html
@@ -199,10 +199,9 @@
 
     <div class="dev-info">
         <h2>DEV</h2>
-        <span>XLESYVIP</span>
-        <span>JAVAENC</span>
-        <span>HTML</span>
-        <span>SCRIPT BOT WA</span>
+        <span>XLESYVIP...</span>
+        <span>JAVAENC..</span>
+        <span>HTML...</span>        
     </div>
 
     <!-- About Me Section -->
